--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -143,7 +143,7 @@
   top: 5px;
   right: 10px;
   z-index: 3;
-  color: $green;
+  color: black;
 }
 
 .text-styling {
