--- a/scss/_team.scss
+++ b/scss/_team.scss
@@ -19,6 +19,11 @@ section.team {
 
   .profile-team img {
     max-width: 280px;
+
+    @media (min-width: 100px) and (max-width: 575px) {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .text-team {
@@ -52,7 +57,4 @@ section.team {
     }
   }
 
-  @media (min-width: 100px) and (max-width: 575px) {
-
-  }
 }
